[package]
name = "bundler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ecow = "0.2.2"
email_address = { version = "0.2.4", default-features = false }
flate2 = "1"
ignore = "0.4"
image = "0.25.6"
rayon = "1.10.0"
regex = "1.11.1"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
spdx = "0.10.8"
tar = "0.4.44"
toml = "0.8.20"
typst-syntax = "0.13.1"
unicode-ident = "1.0.18"
unscanny = "0.1.0"
walkdir = "2.5.0"